<resources>
    <string name="app_name">BeaBa</string>
    <string name="toolbar_title">Olá, %s\n o que vamos aprender hoje?</string>

    <!--PLACEHOLDERS LABELS-->
    <string name="placeholder_empty_label">Não existem resultados.</string>
    <string name="placeholder_empty_title">Erro!</string>
    <string name="placeholder_error_title">Ops!</string>
    <string name="placeholder_error_label">Houve um erro inesperado.</string>
    <string name="placeholder_error_button_label">Tentar novamente</string>

    <!--ACTIONS-->
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="action_ok">OK</string>
    <string name="action_save">Salvar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="dictate_vowels">Conhecer Vogais</string>
    <string name="dictate_syllables">Ditar Silabas</string>
    <string name="math_basic">Contar até 10</string>
    <string name="paint_free">Pintura Livre</string>
    <string name="letter_a">A</string>
    <string name="letter_e">E</string>
    <string name="letter_i">I</string>
    <string name="letter_o">O</string>
    <string name="letter_u">U</string>
    <string name="vocalic_ao">ÃO</string>
    <string name="dictate_toolbar_title">Ditar Vogais</string>
    <string name="syllable_toolbar">Vamos Aprender as sílabas</string>
    <string name="maths_toolbar">Vamos Contar?</string>
    <string name="title_home">Início</string>
    <string name="title_profile">Meu Perfil</string>
    <string name="canvasContentDescription">Desenho Livre</string>
    <string name="paint_toolbar">Solte a Imaginação</string>
    <string name="palette_colors">Paleta de Cores</string>
    <string name="eraser_dialog_title">Borracha</string>
</resources>