<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/letterA"
                    style="@style/VeryBig"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:text="@string/letter_a"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/letterE"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/letterE"
                    style="@style/VeryBig"
                    android:text="@string/letter_e"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/letterA"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:id="@+id/letterI"
                    style="@style/VeryBig"
                    android:text="@string/letter_i"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    app:layout_constraintEnd_toStartOf="@+id/letterO"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/letterO"
                    style="@style/VeryBig"
                    android:text="@string/letter_o"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/letterI"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <TextView
                    android:id="@+id/letterU"
                    style="@style/VeryBig"
                    android:text="@string/letter_u"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    app:layout_constraintEnd_toStartOf="@+id/letterAO"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/letterAO"
                    style="@style/VeryBig"
                    android:text="@string/vocalic_ao"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/letterU"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>